retour pour test

--- a/src/templates/film_detail.html
+++ b/src/templates/film_detail.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Notation - {{ film.nom }}</title>
-</head>
-<body>
-  <h1>{{ film.nom }}</h1>
-  <form method="post">
-    <label for="note">Note (sur 5):</label>
-    <input type="number" name="note" min="0" max="5" step="0.1" value="{{ film.note or '' }}" required><br>
-
-    <label for="commentaire">Commentaire :</label><br>
-    <textarea name="commentaire" rows="4" cols="40">{{ film.commentaire or '' }}</textarea><br>
-
-    <button type="submit">Enregistrer</button>
-  </form>
-  <p><a href="{{ url_for('index') }}">← Retour</a></p>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <link href="/static/liste.css" rel="stylesheet">
+    <title>Stim</title>
+  </head>
+  <body>
+    <h1>Liste des jeux</h1>
+    <table>
+        <thead>
+            <th>nom</th>
+            <th>plateforme</th>
+            <th>prix</th>
+            <th>type</th>
+            <th>description</th>
+        </thead>
+        {% for jeu in jeux %}
+        <tbody>
+            <td>
+                {{jeu[0]}}
+            </td>
+            <td>
+                {{jeu[1]}}
+            </td>
+            <td>
+                {{jeu[2]}}
+            </td>
+            <td>
+                {{jeu[3]}}
+            </td>
+            <td>
+                {{jeu[4]}}
+            </td>
+        </tbody>
+        {% endfor %}
+    </table>
+    <button onclick="location.href='/'">Ajouter un jeu</button>
+  </body>
 </html>
