--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,65 +2,37 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <title>Ajouter un film</title>
     <link href="/static/info.css" rel="stylesheet">
-    <title>Stim</title>
   </head>
   <body>
-    <h1>Ajouter un jeu</h1>
-    <form enclype="text/plain" method="POST" action="/liste">
-      <label>Nom</label>
-      <input type="text" name="nom">
-      <br>
-      <label>Genres</label>
-      <div>
-        {% for genre in Genres %}
-          <label>
-            <input type="checkbox" name="genres[]" value="{{genre[0]}}">
-            {{genre[1]}}
-          </label><br>
-        {% endfor %}
-      </div>
-      <!-- <select name="genres[]" multiple size="4">
-        {% for genre in Genres %}
-        <option value={{genre[0]}}>{{genre[1]}}</option>
-        {% endfor %}
-      </select> -->
-      <!-- <select multiple name="genres">
-        {% for genre in Genres %}
-        <option value={{genre[0]}}>{{genre[1]}}</option>
-        {% endfor %}
-      </select> -->
-      <br>
-      <label>Prix</label>
-      <input type="text" name="prix">
-      <br>
-      <label>Type</label>
-      <select name="type">
-        {% for type in Types %}
-        <option value={{type[0]}}>{{type[1]}}</option>
+    <h1>Ajouter un film</h1>
+    <form method="POST" action="/ajouter_film">
+      <label for="nom">Nom du film :</label>
+      <input type="text" id="nom" name="nom" required>
+      <br><br>
+
+      <label for="note">Note :</label>
+      <select id="note" name="note" required>
+        {% for n in range(0,6) %}
+          <option value="{{ n }}">{{ n }}</option>
         {% endfor %}
       </select>
-      <br>
-      <label>Description</label>
-      <input type="text" name="description">
-      <br>
-      <input type="submit" name="soumettre">
+      <br><br>
+
+      <label for="genre">Genre :</label>
+      <select id="genre" name="genre" required>
+        {% for genre in Genres %}
+          <option value="{{ genre[0] }}">{{ genre[1] }}</option>
+        {% endfor %}
+      </select>
+      <br><br>
+
+      <label for="annee">Année :</label>
+      <input type="number" id="annee" name="annee" min="1880" max="{{ current_year }}" required>
+      <br><br>
+
+      <button type="submit">Envoyer</button>
     </form>
-
-    <button onclick="location.href='liste'">Liste des jeux</button>
-
-    <form enclype="text/plain" method="POST" action="/plateforme">
-      <label>Ajouter une plateforme</label>
-      <input type="text" name="plateforme">
-      <input type="submit" name="soumettre">
-    </form>
-
-    <form enclype="text/plain" method="POST" action="/type">
-      <label>Ajouter un type</label>
-      <input type="text" name="type">
-      <input type="submit" name="soumettre">
-    </form>
-
-    <h2 id="error">{{error}}</h1>
   </body>
 </html>
