--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,32 +7,35 @@
   </head>
   <body>
     <h1>Ajouter un film</h1>
-    <form method="POST" action="/ajouter_film">
+    <form method="POST" action="/ajout_film">
       <label for="nom">Nom du film :</label>
       <input type="text" id="nom" name="nom" required>
       <br><br>
 
-      <label for="note">Note :</label>
-      <select id="note" name="note" required>
-        {% for n in range(0,6) %}
-          <option value="{{ n }}">{{ n }}</option>
-        {% endfor %}
-      </select>
+      <label id="annee_sortie">Année de sortie</label>
       <br><br>
 
       <label for="genre">Genre :</label>
-      <select id="genre" name="genre" required>
-        {% for genre in Genres %}
-          <option value="{{ genre[0] }}">{{ genre[1] }}</option>
-        {% endfor %}
+      <br>
+      {% for genre in Genres %}
+        <label>
+          <input type="checkbox" name="genres[]" value="{{genre[0]}}">
+          {{genre[1]}}
+        </label><br>
+      {% endfor %}
       </select>
       <br><br>
 
-      <label for="annee">Année :</label>
-      <input type="number" id="annee" name="annee" min="1880" max="{{ current_year }}" required>
-      <br><br>
+      <label>Resume</label>
+      <input type="text" name="resume">
 
+      <br><br>
       <button type="submit">Envoyer</button>
     </form>
+    <a href="/">
+      <button type="button">Page d'accueil</button>
+  </a>
+  <h2 id="error">{{error}}</h1>
   </body>
+  <script defer src="{{url_for('static', filename='add_film.js')}}"></script>
 </html>
