--- a/src/templates/films.html
+++ b/src/templates/films.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Liste des Films</title>
-</head>
+    <head>
+        <title>Liste des Films</title>
+    </head>
 
-<!-- première page, avec une liste de films ! -->
-<body>
-    <h1>Liste des Films</h1>
-    <a href="/ajouter_film">
-        <button type="button">Ajouter un film</button>
-    </a>
-    <form method="get" action="/films">
-        <label for="genre">Genre :</label>
-        <select name="genre" id="genre">
-            <option value="">-- Tous --</option>
+    <!-- première page, avec une liste de films ! -->
+    <body>
+        <h1>Liste des Films</h1>
+        <a href="/ajouter_film">
+            <button type="button">Ajouter un film</button>
+        </a>
+        <form method="post" action="/search_film">
+            <label for="genre">Genre :</label>
+            <br>
             {% for genre in Genres %}
-                <option value="{{ genre[0] }}" {% if selected_genre == genre[0]|string %}selected{% endif %}>{{ genre[1] }}</option>
+            <label>
+                <input type="checkbox" name="genres[]" value="{{genre[0]}}">
+                {{genre[1]}}
+            </label>
             {% endfor %}
-        </select>
 
-        <label for="annee">Année :</label>
-        <select name="annee" id="annee">
-            <option value="">-- Toutes --</option>
-            {% for a in Annees %}
-                <option value="{{ a }}" {% if selected_annee == a %}selected{% endif %}>{{ a }}</option>
+            <br>
+
+            <label id="annee_sortie">Année de sortie</label>
+
+            <label for="recherche">Recherche :</label>
+            <input type="text" name="nom" value="{{ recherche }}" placeholder="Nom du film" />
+
+            <button type="submit">Filtrer</button>
+        </form>
+
+        <ul>
+        {% if films %}
+            {% for film in films %}
+                <p>{{film[0]}}</p>
+                <!-- <li><strong>{{ film[1] }}</strong> ({{ film[3] }})<br>{{ film[2] }}</li> -->
             {% endfor %}
-        </select>
-
-        <label for="recherche">Recherche :</label>
-        <input type="text" name="recherche" value="{{ recherche }}" placeholder="Nom du film" />
-
-        <button type="submit">Filtrer</button>
-    </form>
-
-    <ul>
-    {% if films %}
-        {% for film in films %}
-            <li><strong>{{ film[1] }}</strong> ({{ film[3] }})<br>{{ film[2] }}</li>
-        {% endfor %}
-    {% else %}
-        <li>Pas de films encores notés</li>
-    {% endif %}
-    </ul>
-</body>
+        {% else %}
+            <li>Pas de films dans la base de données</li>
+        {% endif %}
+        </ul>
+    </body>
+    <script defer src="{{url_for('static', filename='add_film.js')}}"></script>
 </html>
