json de form  pour l'ajout de film, plus qu'à copier coller pour le reste

--- a/src/templates/add_film.html
+++ b/src/templates/add_film.html
@@ -46,5 +46,5 @@
 
     <h2 id="error">{{error}}</h1>
   </body>
-  <script defer src="{{url_for('static', filename='add_film.js')}}"></script>
+  <script defer src="{{url_for('static', filename='index.js')}}"></script>
 </html>
