--- a/src/templates/films.html
+++ b/src/templates/films.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="/static/films.css" rel="stylesheet">
+        <script src="{{url_for('static', filename='liste_annee.js')}}"></script>
         <title>Liste des Films</title>
     </head>
 
@@ -47,5 +48,5 @@
         {% endif %}
         </ul>
     </body>
-    <script defer src="{{url_for('static', filename='add_film.js')}}"></script>
+
 </html>
