--- a/src/templates/films.html
+++ b/src/templates/films.html
@@ -3,6 +3,7 @@
     <head>
         <link href="/static/films.css" rel="stylesheet">
         <script src="{{url_for('static', filename='liste_annee.js')}}"></script>
+        <script defer src="{{url_for('static', filename='films.js')}}"></script>
         <title>Liste des Films</title>
     </head>
 
@@ -29,24 +30,12 @@
             <label for="recherche">Recherche :</label>
             <input type="text" name="nom" value="{{ recherche }}" placeholder="Nom du film" />
 
-            <button type="submit" id="submit_search
-            ">Filtrer</button>
+            <button type="submit" id="submit_search">Filtrer</button>
         </form>
 
         <ul>
-        {% if films %}
-            <form id="film_detail" method="post" action="/film_detail">
-            {% for film in films %}
-                <div class="onefilm" onclick="document.getElementById('film_detail').submit();">
-                <li><strong>{{ film[1] }}</strong> ({{ film[3] }})</li>
-                <input type="hidden" name="film_id" value="{{film[0]}}">
-                </div>
-            {% endfor %}
+            <div id="film_detail">
             </form>
-
-        {% else %}
-            <li>Pas de films dans la base de données</li>
-        {% endif %}
         </ul>
     </body>
 
