--- a/src/templates/films.html
+++ b/src/templates/films.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="/static/films.css" rel="stylesheet">
-        <script src="{{url_for('static', filename='liste_annee.js')}}"></script>
-        <script defer src="{{url_for('static', filename='films.js')}}"></script>
-        <title>Liste des Films</title>
-    </head>
-
-    <!-- première page, avec une liste de films ! -->
-    <body>
-        <h1>Liste des Films</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Liste des Films</title>
+    <link href="/static/info.css" rel="stylesheet">
+    <script src="{{url_for('static', filename='liste_annee.js')}}"></script>
+    <script defer src="{{url_for('static', filename='films.js')}}"></script>
+    
+  </head>
+  <body>
+    <main class="container">
+      <h1>Liste des Films</h1>
+      <div class="actions">
         <a href="/ajouter_film">
-            <button type="button">Ajouter un film</button>
+          <button type="button" class="btn-large">Ajouter un film</button>
         </a>
-        <form method="post" action="/search_film" id="search_film">
-            <label for="genre">Genre :</label>
-            <br>
-            {% for genre in Genres %}
-            <label>
-                <input type="checkbox" name="genres[]" value="{{genre[0]}}">
-                {{genre[1]}}
-            </label>
-            {% endfor %}
-
-            <br>
-
-            <label id="annee_sortie">Année de sortie</label>
-
-            <label for="recherche">Recherche :</label>
-            <input type="text" name="nom" value="{{ recherche }}" placeholder="Nom du film" />
-
-            <button type="submit" id="submit_search">Filtrer</button>
-        </form>
-
-        <ul>
-            <div id="film_detail">
-            </form>
-        </ul>
-    </body>
-
+      </div>
+      <div class="flex-films-page">
+        <!-- Colonne gauche : recherche -->
+        <aside class="search-panel">
+          <form method="post" action="/search_film" id="search_film">
+            <div class="form-group">
+              <label for="genre">Genre :</label>
+              <div class="genres-checkboxes">
+                {% for genre in Genres %}
+                  <label>
+                    <input type="checkbox" name="genres[]" value="{{genre[0]}}">
+                    {{genre[1]}}
+                  </label>
+                {% endfor %}
+              </div>
+            </div>
+            <div class="form-group">
+              <label id="annee_sortie">Année de sortie</label>
+            </div>
+            <div class="form-group">
+              <label for="recherche">Recherche :</label>
+              <input type="text" name="nom" value="{{ recherche }}" placeholder="Nom du film" />
+            </div>
+            <button type="submit" id="submit_search" class="btn-large">Filtrer</button>
+            <button type="button" id="reset_search" class="btn-large" style="margin-top:8px;background:#aaa;">Annuler la recherche</button>
+          </form>
+        </aside>
+        <!-- Colonne droite : liste des films -->
+        <section class="films-panel films-list">
+          <ul id="film_detail" class="films-ul">
+         
+          </ul>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
