debut ajout professionnel

--- a/src/templates/films.html
+++ b/src/templates/films.html
@@ -15,6 +15,9 @@
         <a href="/ajouter_film">
           <button type="button" class="btn-large">Ajouter un film</button>
         </a>
+        <a href="/ajouter_professionnel">
+          <button type="button" class="btn-large">Ajouter un professionnel du cinéma</button>
+        </a>
       </div>
       <div class="flex-films-page">
         <!-- Colonne gauche : recherche -->
