--- a/src/templates/film_detail.html
+++ b/src/templates/film_detail.html
@@ -23,15 +23,17 @@
       <ul id="pro-list">
         {% for pro in Crew %}
           <li class="pro-item" data-pro-id="{{pro[0]}}" data-metier="{{pro[6]}}">
-            <div class="pro-infos">
+            <form id="professionnel_detail" method="post" action="/professionnel_detail">
+            <div class="pro-infos" onclick="document.getElementById('professionnel_detail').submit();">
+              <input type="hidden" id="prof_id" name="prof_id" value="{{pro[0]}}">
               <strong>{{pro[1]}} {{pro[2]}}</strong>
-              {% if pro[4] %}<span class="pro-meta">({{pro[4]}})</span>{% endif %}
-              {% if pro[5] %}<span class="pro-meta">, né(e) le {{pro[5]}}</span>{% endif %}
-              {% if pro[6] %}<span class="pro-meta">, décédé(e) le {{pro[6]}}</span>{% endif %}
-              <span class="pro-meta">— {{pro[3]}}</span>
-            </div>
+                {% if pro[4] %}<span class="pro-meta">, né(e) le {{pro[4]}}</span>{% endif %}
+                {% if pro[5] %}<span class="pro-meta">, décédé(e) le {{pro[5]}}</span>{% endif %}
+                <span class="pro-meta">— {{pro[3]}}</span>
+              </div>
+            </form>
             <button class="delete-pro" type="button" title="Supprimer"></button>
-          </li>
+        </li>
         {% endfor %}
       </ul>
       <button id="show-add-pro" type="button" class="btn-grey">Ajouter un professionnel</button>
